manifests/k8s/kustomize/base/playground-api/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-api
  labels:
    app: playground-api
spec:
  replicas: 1
  template:
    metadata:
      name: playground-api
      labels:
        app: playground-api
    spec:
      serviceAccountName: playground-api
      restartPolicy: Always
      #      imagePullSecrets:
      #        - name: docker-registry-secret
      containers:
        - name: main
          image: yurikrupnik/playground-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: "16Mi"
              cpu: "200m"
            requests:
              memory: "8Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
  selector:
    matchLabels:
      app: playground-api
