manifests/k8s/kustomize/base/playground-api/base/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
  labels:
    role: curl-test
spec:
  containers:
    - name: curl-test0
      image: busybox
      command: ["wget", "http://web-playground.default.svc.cluster.local:8080/health"]
      imagePullPolicy: IfNotPresent
    - name: curl-test1
      image: busybox
      command: [ "wget", "http://web-playground.default.svc.cluster.local:8080/health" ]
      imagePullPolicy: IfNotPresent
  restartPolicy: OnFailure
---
---
#apiVersion: batch/v1
#kind: Job
#metadata:
#  name: title
#spec:
##  schedule: "* * * * *" #	Run every minute
##  jobTemplate:
#  spec:
#      template:
#        spec:
#          containers:
#            - name: title
#              image: busybox:latest
#              imagePullPolicy: IfNotPresent
#              command:
#                - /bin/sh
#                - -c
#                - date; echo Hello!
#          restartPolicy: OnFailure
#
---
apiVersion: v1
kind: Pod
metadata:
  name: hey-test1
  labels:
    purpose: test
spec:
  containers:
    - name: hey-test-pod
      image: ricoli/hey
      args:
        - -n
        - "10000" # Number of requests
        - -c
        - "100" # Number of concurrent users
        - "http://web-playground.default.svc.cluster.local:8080/health" # Replace with your service URL
      resources:
        requests:
          memory: "128Mi"
          cpu: "250m"
        limits:
          memory: "256Mi"
          cpu: "500m"
  restartPolicy: OnFailure
