manifests/k8s/kustomize/base/playground-api/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: playground-api
  annotations:
    "prometheus.io/scrape": "true"
  labels:
    run: playground-api
spec:
  type: ClusterIP
  ports:
    - name: http
#      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: playground-api
