manifests/k8s/kustomize/base/playground-api/base/ingress.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: apps
  listeners:
    - protocol: HTTP
      port: 80
      name: prod-web-gw
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
    - name: prod-web
  rules:
    - backendRefs:
        - name: web-playground
          port: 8080 # http
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: node-nest-app-gateway
##  namespace: istio-system
#spec:
#  selector:
#    istio: ingressgateway # use istio default controller
#  servers:
#    - port:
#        number: 80
#        name: http
#        protocol: HTTP
#      hosts:
#        - "*"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: node-nest-app
##  namespace: istio-system
#spec:
#  hosts:
#    - "*"
#  gateways:
#    - node-nest-app-gateway
#  http:
#    - match:
#        - uri:
#            exact: /api/projects
#      #        - uri:
#      #            prefix: /static
#      #        - uri:
#      #            exact: /login
#      #        - uri:
#      #            exact: /logout
#      #        - uri:
#      #            prefix: /api/v1/products
#      route:
#        - destination:
#            #            host: argocd-server.argocd.svc.cluster.local
#            host: node-nest-app-service.default.svc.cluster.local
#            #            host: prometheus.istio-system.svc.cluster.local
#            port:
#              number: 3333
